SPLITEMAPP-78 Adding new dialog for adding a new contact Including new images for this dialog Updating the manage contact screen to include the new button to add a contact Fixing the way we show progress in the questions dialog Adding some new required strings Adding new AddContact task Updating the RestfulFragment class to include a new method to use the add contact task

--- a/splitemapp-android/res/values/strings.xml
+++ b/splitemapp-android/res/values/strings.xml
@@ -164,8 +164,16 @@
     <string name="mc_title">Manage Contacts</string>
     <string name="mc_back_action">Back</string>
     <string name="mc_contacts">Contacts</string>
+    <string name="mc_add_contact">Add Contact</string>
+    <string name="mc_contact_added">Contact added!</string>
+    <string name="mc_email_hint">Email address?</string>
+    <string name="mc_search">Search</string>
+    <string name="mc_not_found">User not found. Do you want to send an invite?</string>
+    <string name="mc_invite">Invite</string>
+    <string name="mc_invite_sent">Invite sent!</string>
     <string name="mc_synchronize_contacts_button">Synchronize Contacts</string>
     <string name="mc_avatar_description">Contact Avatar</string>
+    <string name="mc_add_contact_description">Add Contact</string>
     
     <!-- Balance -->
     <string name="b_title">Balance</string>
