SPLITEMAPP-82 Adding new dialog for login screen to manage password reset Adding new iamges for password reset Adding new layout for dialog Adding new task to call the password reset service Adding exclusion for velocity dependencies Updating the login fragment to include the new forgot password text

--- a/splitemapp-android/res/values/strings.xml
+++ b/splitemapp-android/res/values/strings.xml
@@ -38,7 +38,12 @@
     <!-- Login Screen -->
     <string name="li_username_hint">Username or Email</string>
     <string name="li_password_hint">Password</string>
+    <string name="li_forgot_password">Forgot your password?</string>
+    <string name="li_password_reset">Password reset</string>
+    <string name="li_reset_password">Reset</string>
     <string name="li_log_in_button">Login</string>
+    <string name="li_email_hint">Email address?</string>
+    <string name="li_password_reset_sent">Reset request sent!</string>
     <string name="li_sign_up_question">Don\'t have an account?</string>
     <string name="li_sign_up_link">Sign up</string>
     
