--- a/SplitemApp/app/src/main/res/values-es/strings.xml
+++ b/SplitemApp/app/src/main/res/values-es/strings.xml
@@ -42,6 +42,7 @@
     <string name="li_password_reset">Generar clave</string>
     <string name="li_reset_password">Generar</string>
     <string name="li_log_in_button">Iniciar sesion</string>
+    <string name="li_account_login_button">Cuenta SplitemApp</string>
     <string name="li_email_hint">Direccion de email?</string>
     <string name="li_password_reset_sent">Solicitud enviada!</string>
     <string name="li_sign_up_question">No tienes una cuenta?</string>
